// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authorizations should return all authorizations 1`] = `
Object {
  "authorizations": Object {
    "__typename": "AuthorizationsConnection",
    "nodes": Array [
      Object {
        "__typename": "Authorization",
        "authId": "101",
        "createdBlockId": "89",
        "data": "{\\"asset\\":{\\"these\\":[]},\\"extrinsic\\":{\\"these\\":[]},\\"portfolio\\":{\\"these\\":[]}}",
        "expiry": null,
        "fromDid": "0xa58002072a47005b78535228777718462ec9a5981abc47aa5a21a2f1d793677a",
        "status": "Consumed",
        "toDid": null,
        "toKey": "0x460963cd0e0e6a8d4553ba2adde6cfa9e56786895f67f0a320967a44afd1e55c",
        "type": "JoinIdentity",
        "updatedBlockId": "91",
      },
      Object {
        "__typename": "Authorization",
        "authId": "102",
        "createdBlockId": "90",
        "data": "{\\"asset\\":{\\"these\\":[]},\\"extrinsic\\":{\\"these\\":[]},\\"portfolio\\":{\\"these\\":[]}}",
        "expiry": null,
        "fromDid": "0xa05d9333759c804fbab61d454f6317c1a8257c01c49c68e029a112f9123e9c0b",
        "status": "Consumed",
        "toDid": null,
        "toKey": "0xfaf1ab23de39dc22c7c56eb662c96e6e0ff527acffadc2d005ac3065f767cf78",
        "type": "JoinIdentity",
        "updatedBlockId": "92",
      },
      Object {
        "__typename": "Authorization",
        "authId": "110",
        "createdBlockId": "100",
        "data": "{\\"asset\\":{\\"these\\":[]},\\"extrinsic\\":{\\"these\\":[]},\\"portfolio\\":{\\"these\\":[]}}",
        "expiry": null,
        "fromDid": "0xa9755a2d863adf7981d60f816884783bb2b71788efdfae845fc2830c36500551",
        "status": "Consumed",
        "toDid": null,
        "toKey": "0xbc18d7b0241882bcfc94b5fe0d520988f2a9f4050a2a1df58c4de14ee23f3915",
        "type": "JoinIdentity",
        "updatedBlockId": "101",
      },
      Object {
        "__typename": "Authorization",
        "authId": "237",
        "createdBlockId": "278",
        "data": "[\\"0x31325449434b455200000000\\",{\\"full\\":null}]",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Consumed",
        "toDid": "0xbe22c6f8fe0d907365c3ccbf7e955bab29844d0009e21944c66c56973c67fdd2",
        "toKey": null,
        "type": "BecomeAgent",
        "updatedBlockId": "279",
      },
      Object {
        "__typename": "Authorization",
        "authId": "238",
        "createdBlockId": "280",
        "data": "[\\"0x31325449434b455200000000\\",{\\"full\\":null}]",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Consumed",
        "toDid": "0xbd8b5c568e457823d3d3f18d2d1cc1ed79a086124760e9df41a4c66e96de9b42",
        "toKey": null,
        "type": "BecomeAgent",
        "updatedBlockId": "281",
      },
      Object {
        "__typename": "Authorization",
        "authId": "239",
        "createdBlockId": "284",
        "data": "[\\"0x31325449434b455200000000\\",{\\"full\\":null}]",
        "expiry": null,
        "fromDid": "0xbe22c6f8fe0d907365c3ccbf7e955bab29844d0009e21944c66c56973c67fdd2",
        "status": "Consumed",
        "toDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "toKey": null,
        "type": "BecomeAgent",
        "updatedBlockId": "285",
      },
      Object {
        "__typename": "Authorization",
        "authId": "254",
        "createdBlockId": "310",
        "data": "{\\"asset\\":{\\"these\\":[]},\\"extrinsic\\":{\\"these\\":[]},\\"portfolio\\":{\\"these\\":[]}}",
        "expiry": null,
        "fromDid": "0xf0c5f26a6a463fc687bafb623a28ba8f571e155a1612a939e005ac7f0b327d38",
        "status": "Consumed",
        "toDid": null,
        "toKey": "0x6e041ae54374e2e593f540782a9c54d0a91ca8ebf91060acd5b69e7332e9856c",
        "type": "JoinIdentity",
        "updatedBlockId": "311",
      },
      Object {
        "__typename": "Authorization",
        "authId": "276",
        "createdBlockId": "367",
        "data": "{\\"asset\\":{\\"whole\\":null},\\"extrinsic\\":{\\"whole\\":null},\\"portfolio\\":{\\"whole\\":null}}",
        "expiry": null,
        "fromDid": "0x43b62e2ea8713eb6f766beed4651f41ad52b607e7c6214bd6cb444952e9c3a6f",
        "status": "Consumed",
        "toDid": null,
        "toKey": "0xbc536d93907cfd70c5db6382d27776554f7338669c518dcef282caf7a4e8fc4b",
        "type": "JoinIdentity",
        "updatedBlockId": "368",
      },
      Object {
        "__typename": "Authorization",
        "authId": "284",
        "createdBlockId": "387",
        "data": "[\\"5Dfew5jnLuwQqEvvYFJcTJxHanfrNUGx33tWfbuR2a1X9oqe\\",\\"5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY\\",100000]",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Consumed",
        "toDid": null,
        "toKey": "0x46e3fad9460b2795400d9b6b93ac367e21dfcc22cb27d1adbcfd7a5187ed9d6f",
        "type": "AddRelayerPayingKey",
        "updatedBlockId": "388",
      },
      Object {
        "__typename": "Authorization",
        "authId": "82",
        "createdBlockId": "76",
        "data": "{\\"asset\\":{\\"these\\":[]},\\"extrinsic\\":{\\"these\\":[]},\\"portfolio\\":{\\"these\\":[]}}",
        "expiry": null,
        "fromDid": "0xefc7149f2dd9738516545ce9d2747fb69cf799fe921043ea359beb3d09f0ee57",
        "status": "Pending",
        "toDid": null,
        "toKey": "0x5a6a40ba68157d8c645bd9d380c0b1f638195740c6ab01510e66e2fb0fdb780e",
        "type": "JoinIdentity",
        "updatedBlockId": "76",
      },
      Object {
        "__typename": "Authorization",
        "authId": "83",
        "createdBlockId": "77",
        "data": "{\\"asset\\":{\\"these\\":[]},\\"extrinsic\\":{\\"these\\":[]},\\"portfolio\\":{\\"these\\":[]}}",
        "expiry": null,
        "fromDid": "0x9a669857009d3ebe7be1cb5c69bc5b039b28a9fb697562b3efcc1d4b7267825c",
        "status": "Pending",
        "toDid": null,
        "toKey": "0x7a37282c5bbeee50ef3f3fe0308d344284ac6384b1f75deb1caad9f86d095a08",
        "type": "JoinIdentity",
        "updatedBlockId": "77",
      },
      Object {
        "__typename": "Authorization",
        "authId": "84",
        "createdBlockId": "78",
        "data": "\\"5DqZyPx9NAVzWhzRLeptzz9u1GwxsX5AQB3pzrUAHFFBJHCM\\"",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Pending",
        "toDid": "0x5ce6ea4ef8c5746f714be282a38e9fff86bf657bd743aa801abbd76d4cfbc9a2",
        "toKey": null,
        "type": "AddMultiSigSigner",
        "updatedBlockId": "78",
      },
      Object {
        "__typename": "Authorization",
        "authId": "85",
        "createdBlockId": "78",
        "data": "\\"5DqZyPx9NAVzWhzRLeptzz9u1GwxsX5AQB3pzrUAHFFBJHCM\\"",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Pending",
        "toDid": "0x12ea80d740968fc2da495200ab22db9eb22f9bb6877ce497d3ab879047e6d690",
        "toKey": null,
        "type": "AddMultiSigSigner",
        "updatedBlockId": "78",
      },
      Object {
        "__typename": "Authorization",
        "authId": "86",
        "createdBlockId": "78",
        "data": "\\"5DqZyPx9NAVzWhzRLeptzz9u1GwxsX5AQB3pzrUAHFFBJHCM\\"",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Pending",
        "toDid": "0x7980b4b5a362343ed4563aee132ab200ff01d43382b0f00abc31c01511dcd929",
        "toKey": null,
        "type": "AddMultiSigSigner",
        "updatedBlockId": "78",
      },
    ],
  },
}
`;

exports[`authorizations should return authorisations filtered by authorization type 1`] = `
Object {
  "authorizations": Object {
    "__typename": "AuthorizationsConnection",
    "nodes": Array [
      Object {
        "__typename": "Authorization",
        "authId": "237",
        "createdBlockId": "278",
        "data": "[\\"0x31325449434b455200000000\\",{\\"full\\":null}]",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Consumed",
        "toDid": "0xbe22c6f8fe0d907365c3ccbf7e955bab29844d0009e21944c66c56973c67fdd2",
        "toKey": null,
        "type": "BecomeAgent",
        "updatedBlockId": "279",
      },
      Object {
        "__typename": "Authorization",
        "authId": "238",
        "createdBlockId": "280",
        "data": "[\\"0x31325449434b455200000000\\",{\\"full\\":null}]",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Consumed",
        "toDid": "0xbd8b5c568e457823d3d3f18d2d1cc1ed79a086124760e9df41a4c66e96de9b42",
        "toKey": null,
        "type": "BecomeAgent",
        "updatedBlockId": "281",
      },
      Object {
        "__typename": "Authorization",
        "authId": "239",
        "createdBlockId": "284",
        "data": "[\\"0x31325449434b455200000000\\",{\\"full\\":null}]",
        "expiry": null,
        "fromDid": "0xbe22c6f8fe0d907365c3ccbf7e955bab29844d0009e21944c66c56973c67fdd2",
        "status": "Consumed",
        "toDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "toKey": null,
        "type": "BecomeAgent",
        "updatedBlockId": "285",
      },
      Object {
        "__typename": "Authorization",
        "authId": "84",
        "createdBlockId": "78",
        "data": "\\"5DqZyPx9NAVzWhzRLeptzz9u1GwxsX5AQB3pzrUAHFFBJHCM\\"",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Pending",
        "toDid": "0x5ce6ea4ef8c5746f714be282a38e9fff86bf657bd743aa801abbd76d4cfbc9a2",
        "toKey": null,
        "type": "AddMultiSigSigner",
        "updatedBlockId": "78",
      },
      Object {
        "__typename": "Authorization",
        "authId": "85",
        "createdBlockId": "78",
        "data": "\\"5DqZyPx9NAVzWhzRLeptzz9u1GwxsX5AQB3pzrUAHFFBJHCM\\"",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Pending",
        "toDid": "0x12ea80d740968fc2da495200ab22db9eb22f9bb6877ce497d3ab879047e6d690",
        "toKey": null,
        "type": "AddMultiSigSigner",
        "updatedBlockId": "78",
      },
      Object {
        "__typename": "Authorization",
        "authId": "86",
        "createdBlockId": "78",
        "data": "\\"5DqZyPx9NAVzWhzRLeptzz9u1GwxsX5AQB3pzrUAHFFBJHCM\\"",
        "expiry": null,
        "fromDid": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "status": "Pending",
        "toDid": "0x7980b4b5a362343ed4563aee132ab200ff01d43382b0f00abc31c01511dcd929",
        "toKey": null,
        "type": "AddMultiSigSigner",
        "updatedBlockId": "78",
      },
    ],
  },
}
`;
